# aprendecomigo

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .railway-staging  API_SPECIFICATIONS.md  BACKEND_NAVIGATION_APIs_QA_COMPREHENSIVE_REPORT.md  BACKEND_TEST_ANALYSIS_2025-08-09.md  CHANGELOG.md  CLAUDE.md  CLAUDE_COMMAND_CHAINING_GUIDE.md  COMPREHENSIVE_CROSS_PLATFORM_TEST_REPORT.md  COMPREHENSIVE_STUDENT_REGISTRATION_QA_REPORT.md  COMPREHENSIVE_TEACHER_DASHBOARD_QA_FINAL_REPORT.md  CRITICAL_CSS_THEMING_FIX_REPORT.md  CRITICAL_QA_TEST_EXECUTION_REPORT.md  Diagnostic.md  GEMINI.md  GITHUB_ISSUE_119_COMPREHENSIVE_QA_VALIDATION_REPORT.md  GITHUB_ISSUE_55_PAYMENT_SUCCESS_FLOW_VALIDATION_REPORT.md  MELHORIAS_TEMPLATES_RESUMO.md  Makefile  PREVIEW_TEMPLATES.md  Procfile  Procfile.tailwind  README.md  SCHOOL_ADMIN_DASHBOARD_QA_COMPREHENSIVE_REPORT.md  SCHOOL_ADMIN_DASHBOARD_QA_REPORT.md  SECURITY_RECOMMENDATIONS.md  SECURITY_TASKS.md  SERVICES.md  TEACHER_COMMUNICATION_SYSTEM_QA_COMPREHENSIVE_REPORT.md  TEACHER_INVITATION_QA_CRITICAL_FINDINGS.md  TEACHER_INVITATION_SYSTEM_QA_COMPREHENSIVE_REPORT.md  TEACHER_INVITATION_SYSTEM_QA_EXECUTION_REPORT.md  TESTING_GUIDE.md  TEST_FAILURES_TODO.md  TEST_RESULTS.md  claude-cli_accessKeys.csv  (+30 more)
backend/: .gitignore  API_CONTRACT.md  CLAUDE.md  CLAUDE_old.md  COMMUNICATION_API_ENDPOINTS_DOCUMENTATION.md  COMPREHENSIVE_DASHBOARD_QA_REPORT.md  LOGGING_BEST_PRACTICES.md  LOGGING_IMPLEMENTATION_EXAMPLES.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_SECURITY_PERFORMANCE_GUIDE.md  Makefile  Procfile  README.md  ROADMAP.md  TEACHER_ONBOARDING_API.md  USERS_PAGE.md  check_auth.py  complete_review.md  cookies.txt  debug_availability_test.py  debug_list_response.py  env.example  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_admin_payment_apis.py  test_card_display_debug.py  test_communication_api_endpoints.py  test_db.sqlite3  test_email_integration.py  test_fixes_todo.md  test_logging.py  test_navigation_api_performance.py  test_navigation_endpoints.py  test_parent_child_models.py  test_pytest_configuration.py  test_pytest_setup.py  test_security_fixes.py  test_security_fixes_comprehensive.py  (+6 more)
backend/.claude/: settings.local.json
backend/.claude/agents/: django-logging-expert.md  drf-test-engineer.md  py-unit-test-engineer.md  stripe-integration-expert.md
backend/.claude/commands/: app-tests-review.md  backend-develop.md  implement-gh-user-story.md  py-tdd-develop.md  report-to-user-stories.md
backend/.github/workflows/: django.yml
backend/accounts/: README.md  admin.py  api_urls.py  api_views.py  apps.py  consumers.py  db_queries.py  models.py  permissions.py  serializers.py  signals.py  throttles.py  urls.py  user_onboarding.md  views.py  views_original.py
backend/accounts/migrations/: 0001_initial.py  0002_emailverificationcode.py  0002_initial.py  0002_remove_emailverificationcode_code_and_more.py  0003_create_default_educational_system.py  0003_create_default_educational_systems.py  0003_emailverificationcode_failed_attempts_and_more.py  0003_remove_teacherinvitation_unique_active_teacher_invitation_per_school_and_more.py  0003_rename_emailverificationcode_verificationcode.py  0004_emailverificationcode_secret_key_and_more.py  0004_parentchildrelationship_and_more.py  0004_remove_teacherinvitation_unique_active_teacher_invitation_per_school_and_more.py  0004_scheduling_rules_fields.py  0004_verificationcode_accounts_ve_email_7e3f97_idx_and_more.py  0005_remove_customuser_is_admin_and_more.py  0005_remove_teacherinvitation_unique_active_teacher_invitation_per_school_and_more.py  0005_restructure_course_models.py  0006_add_reminder_models.py  0006_fix_verification_secrets.py  (+37 more)
backend/aprendecomigo/: asgi.py  settings.py  test_clean.sqlite3  test_settings.py  urls.py
backend/classroom/: __init__.py  admin.py  chat_views.py  consumers.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/common/: analytics.py  api_response_utils.py  cache_utils.py  error_handling.py  exceptions.py  financial_utils.py  logging_utils.py  messaging.py  pagination.py  pci_utils.py  permissions.py  security_utils.py  stripe_test_fixtures.py  test_base.py  throttles.py
backend/dashboard/: urls.py  views.py
backend/docs/: invitation-integration-testing.md  teacher-invitation-api.md
backend/education/: admin.py  cache_utils.py  models.py  push_notifications.py  services.py  tests.py  views.py
backend/finances/: admin.py  admin_views.py  apps.py  fixtures.py  models.py  models.py.bak  models.py.bak2  serializers.py  serializers_admin.py  services.py  signals.py  tests.py  urls.py  views.py  views_admin.py  views_financial_reports.py
backend/financials/: admin.py  models.py  services.py  signals.py  tests.py  views.py
backend/messaging/: admin.py  apps.py  models.py  serializers.py  serializers_backup.py  services.py  urls.py  views.py
backend/notifications/: models.py  services.py  urls.py  views.py
backend/requirements/: README.md  base.txt  dev.txt  prod.txt
backend/scheduler/: SCHEDULING_RULES_TESTS_README.md  admin.py  apps.py  calendar_views.py  conflict_detection_utilities.py  conflict_detection_utils.py  constants.py  models.py  reminder_services.py  scheduling_rules_services.py  serializers.py  services.py  signals.py  test_api.py  test_api_class_booking.py  test_api_class_completion.py  test_api_class_management.py  test_api_core.py  test_api_teacher_availability.py  test_available_slots_with_scheduling_rules.py  test_base.py  test_group_class_models.py  test_recurring_class_business_logic.py  test_scheduling_rules_business_logic.py  test_slot_calculation_algorithm.py  tests.py  urls.py  views.py  views_old.py
backend/scheduling/: README.md  db_utils.py  google_calendar.py  models.py  tests.py  tests_commands.py  views.py
backend/scripts/: check_auth.py  deploy_to_pythonanywhere.py  generate_api_docs.py
backend/static/: sw.js
backend/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
backend/templates/: base.html  base_dashboard.html  offline.html
(+3170 files in other folders)
